Deploy Ziphil/ShaleianAlice@8c1a2574cc906bf1293404603b1bc7ebcfdac870

--- a/slide/main.html
+++ b/slide/main.html
@@ -10,9 +10,39 @@
   </head>
   <body>
 
-    <div class="slide"><div class="header"></div><div class="footer"></div><div class="content">
-      
-      
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">1</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text sh">
+        <span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span>
+      </div><div class="text sh">
+        <span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span>
+      </div>
+      <div class="text en">
+        Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do.
+      </div>
+    </div></div>
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">2</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text sh">
+        <span class="sans">zesqikas a ces la tal al&apos;atis é al&apos;aqec e xoq lîdac e a hinof, dà dukavat a cit e qinat o lek.</span>
+      </div><div class="text sh">
+        <span class="sans">zesqikas a ces la tal al&apos;atis é al&apos;aqec e xoq lîdac e a hinof, dà dukavat a cit e qinat o lek.</span>
+      </div>
+      <div class="text en">
+        Once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it.
+      </div>
+    </div></div>
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">3</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text sh">
+        <span class="sans">lo, revas a ces.</span>
+        <span class="sans">«pa salot e pil a sokus i xoq ide qinat o lek?»</span>
+      </div><div class="text sh">
+        <span class="sans">lo, revas a ces.</span>
+        <span class="sans">«pa salot e pil a sokus i xoq ide qinat o lek?»</span>
+      </div>
+      <div class="text en">
+        “And what is the use of a book,” thought Alice “without pictures or conversation?”
+      </div>
     </div></div>
  
   </body>
