Deploy Ziphil/ShaleianAlice@3cf418dcb750e86e05b05f6f692100b2aa795292

--- a/slide/main.html
+++ b/slide/main.html
@@ -37,38 +37,73 @@
   <body>
 
     <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">1</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
-      <div class="text-wrapper sh"><div class="text">
-        <span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span>
-      </div></div><div class="text-wrapper sh"><div class="text">
-        <span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span>
-      </div></div>
-      <div class="text-wrapper en"><div class="text">
-        Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do.
-      </div></div>
+      <div class="text-wrapper sh"><div class="text"><span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span></div></div>
+      <div class="text-wrapper en"><div class="text">Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do.</div></div>
     </div></div>
   
     <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">2</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
-      <div class="text-wrapper sh"><div class="text">
-        <span class="sans">zesqikas a ces la tal al&apos;atis é al&apos;aqec e xoq lîdac e a hinof, dà dukavat a cit e qinat o lek.</span>
-      </div></div><div class="text-wrapper sh"><div class="text">
-        <span class="sans">zesqikas a ces la tal al&apos;atis é al&apos;aqec e xoq lîdac e a hinof, dà dukavat a cit e qinat o lek.</span>
-      </div></div>
-      <div class="text-wrapper en"><div class="text">
-        Once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it.
-      </div></div>
+      <div class="text-wrapper sh"><div class="text"><span class="sans">zesqikas a ces la tal al&apos;atis é al&apos;aqec e xoq lîdac e a hinof, dà dukavat a cit e qinat o lek.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">zesqikas a ces la tal al&apos;atis é al&apos;aqec e xoq lîdac e a hinof, dà dukavat a cit e qinat o lek.</span></div></div>
+      <div class="text-wrapper en"><div class="text">Once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it.</div></div>
     </div></div>
   
     <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">3</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
-      <div class="text-wrapper sh"><div class="text">
-        <span class="sans">lo, revas a ces.</span>
-        <span class="sans">«pa salot e pil a sokus i xoq ide qinat o lek?»</span>
-      </div></div><div class="text-wrapper sh"><div class="text">
-        <span class="sans">lo, revas a ces.</span>
-        <span class="sans">«pa salot e pil a sokus i xoq ide qinat o lek?»</span>
-      </div></div>
-      <div class="text-wrapper en"><div class="text">
-        “And what is the use of a book,” thought Alice “without pictures or conversation?”
-      </div></div>
+      <div class="text-wrapper sh"><div class="text"><span class="sans">lo, revas a ces. «pa salot e pil a sokus i xoq ide qinat o lek?»</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">lo, revas a ces. «pa salot e pil a sokus i xoq ide qinat o lek?»</span></div></div>
+      <div class="text-wrapper en"><div class="text">“And what is the use of a book,” thought Alice “without pictures or conversation?”</div></div>
+    </div></div>
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">4</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">ce, soxas a ces qi soxot — duqifat lîgifas a&apos;s e cal, vade meberat o folnasat ovel ebam e&apos;s a zalnat</span> </div></div><div class="text-wrapper sh"><div class="text"><span class="sans">ce, soxas a ces qi soxot — duqifat lîgifas a&apos;s e cal, vade meberat o folnasat ovel ebam e&apos;s a zalnat</span> </div></div>
+      <div class="text-wrapper en"><div class="text">So she was considering in her own mind — as well as she could, for the hot day made her feel very sleepy and stupid</div></div>
+    </div></div>
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">5</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">— e&apos;n kavat á dulat e sokos a kin hitis a&apos;s ce dehisis a&apos;s e lissod so qikis a&apos;s e lîs zi met.</span> </div></div><div class="text-wrapper sh"><div class="text"><span class="sans">— e&apos;n kavat á dulat e sokos a kin hitis a&apos;s ce dehisis a&apos;s e lissod so qikis a&apos;s e lîs zi met.</span> </div></div>
+      <div class="text-wrapper en"><div class="text">— Whether the pleasure of making a daisy-chain would be worth the trouble of getting up and picking the daisies,</div></div>
+    </div></div>
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">6</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">te cal, cákas obâl cife vilis ca fîc ica ces a hapet axac kavat a e lisaz ahafas.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">te cal, cákas obâl cife vilis ca fîc ica ces a hapet axac kavat a e lisaz ahafas.</span></div></div>
+      <div class="text-wrapper en"><div class="text">When suddenly a White Rabbit with pink eyes ran close by her.</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">7</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">dusalat a cal e aniszaz ebam.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">dusalat a cal e aniszaz ebam.</span></div></div>
+      <div class="text-wrapper en"><div class="text">There was nothing so very remarkable in that.</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">8</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">revas ocavas a ʻalis e&apos;n dusalat e atùk ebam</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">revas ocavas a ʻalis e&apos;n dusalat e atùk ebam</span></div></div>
+      <div class="text-wrapper en"><div class="text">Nor did Alice think it so very much out of the way</div></div>
+    </div></div>
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">9</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">— fedakis a&apos;s e&apos;n salet a cal e aduvekos te soxis a&apos;s loke cal te càd, dà salat te cal a zel aves e analef ekoz itazi ces</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">— fedakis a&apos;s e&apos;n salet a cal e aduvekos te soxis a&apos;s loke cal te càd, dà salat te cal a zel aves e analef ekoz itazi ces</span></div></div>
+      <div class="text-wrapper en"><div class="text">— When she thought it over afterwards, it occurred to her that she ought to have wondered at this, but at the time it all seemed quite natural</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">10</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">— a kin tufosas a hapet acik. «â, pa savat e pil? melosaf a tel!»</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">— a kin tufosas a hapet acik. «â, pa savat e pil? melosaf a tel!»</span></div></div>
+      <div class="text-wrapper en"><div class="text"> — To hear the Rabbit say to itself, “Oh dear! Oh dear! I shall be late!”</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">11</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">fotaqas onás a hapet acik zi cikot i sevlat e sokiq, ce licas a cit e sokiq acik, ce fôcas vilisas ovop ofev a&apos;t.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">fotaqas onás a hapet acik zi cikot i sevlat e sokiq, ce licas a cit e sokiq acik, ce fôcas vilisas ovop ofev a&apos;t.</span></div></div>
+      <div class="text-wrapper en"><div class="text">But when the Rabbit actually took a watch out of its waistcoat-pocket, and looked at it, and then hurried on,</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">12</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">vade kebatas e ʻalis ca kin vomes licos a&apos;s cate sot e hapet adak kômat a e sevlat o vîticas a e sokiq, cataf a ces.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">vade kebatas e ʻalis ca kin vomes licos a&apos;s cate sot e hapet adak kômat a e sevlat o vîticas a e sokiq, cataf a ces.</span></div></div>
+      <div class="text-wrapper en"><div class="text">Alice started to her feet, for it flashed across her mind that she had never before seen a rabbit with either a waistcoat-pocket, or a watch to take out of it,</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">13</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">fa delizac a ces zi caxel, dilsizas a ces e nalvaf so zizetis a&apos;s ca cit.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">fa delizac a ces zi caxel, dilsizas a ces e nalvaf so zizetis a&apos;s ca cit.</span></div></div>
+      <div class="text-wrapper en"><div class="text">And burning with curiosity, she ran across the field after it,</div></div>
+    </div></div> 
+  
+    <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">14</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
+      <div class="text-wrapper sh"><div class="text"><span class="sans">onistecaf, qifat licas a ces e&apos;n kûvas a cit ca filotsodvaf avâc i hapet ivo fîcdem izi nátalkìd.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">onistecaf, qifat licas a ces e&apos;n kûvas a cit ca filotsodvaf avâc i hapet ivo fîcdem izi nátalkìd.</span></div></div>
+      <div class="text-wrapper en"><div class="text">And fortunately was just in time to see it pop down a large rabbit-hole under the hedge.</div></div>
     </div></div>
  
   </body>
