Deploy Ziphil/ShaleianAlice@7bcf04d9a987fea48b68702797d03f2b49fc4bf9

--- a/slide/main.html
+++ b/slide/main.html
@@ -36,6 +36,8 @@
   </head>
   <body>
 
+    <div class="title-slide"><div class="content"><div class="title">Alice's Adventures in Wonderland</div><div class="subtitle">Sheleian Translation</div></div></div>
+  
     <div class="slide"><div class="header"></div><div class="footer"><div class="source">Alice's Adventures in Wonderland</div></div><div class="number">1</div><div class="logo"><image src="../asset/logo.svg"></image></div><div class="content">
       <div class="text-wrapper sh"><div class="text"><span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span></div></div><div class="text-wrapper sh"><div class="text"><span class="sans">e ʻalis, pôzac ovel ebam zi&apos;n déqat a&apos;s ca zehrisis vo fîc ica hinof, lo kavat a&apos;s e dat dozat lesas e a&apos;s.</span></div></div>
       <div class="text-wrapper en"><div class="text">Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do.</div></div>
